--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+.gitignore
+.ipynb_checkpoints
 Assignment_1_Parth_v4.ipynb
 Assignment1Aashish.ipynb
 Finally Final Assignment 2.ipynb
-.ipynb_checkpoints
-.gitignore
+Papers
+Documentation
