--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ Assignment1Aashish.ipynb
 Finally Final Assignment 2.ipynb
 Papers
 Documentation
+Data
+*Data/Code_corrected.m
+Results
+ADSP Presentation.pptx
